Fixed: typo line 122

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Application Development</h4>
-                <p class="text-muted">We do end-to-end design and development of web and mobile applicaions. We strive to deliver products that are that are intuitive, fast, and have a touch of design beauty.</p>
+                <p class="text-muted">We do end-to-end design and development of web and mobile applicaions. We strive to deliver products that are intuitive, fast, and have a touch of design beauty.</p>
             </div>
 
             <div class="col-md-4">
